package net.deanly.structure.search.domain.search.core.exception;

public class NoQueryServiceException extends Exception {
    public NoQueryServiceException(String message) {
        super(message);
    }
}
