package net.deanly.structure.search.domain.search.core.values;

public enum SearchOperator {
    AND, OR
}
