package net.deanly.structure.search.domain.search.provider;

public enum QueryServiceType {
    DB_TABLE_1,
    ES_INDEX_1,
    API_SOMEONE
    ;
}
